# seeseestar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SeeSeeStar_global.h  graph.h
backend/: CMakeLists.txt  api.cpp  api.h  edge.cpp  edge.h  graph.cpp  graph.h  node.cpp  node.h
frontend/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  GlobalXmlns.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  frontend.csproj
